apps/base/homepage/homepage-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-homepage-default
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hephaestus.markmk.com`) || Host(`markmk.com`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
          namespace: homepage
      middlewares:
        - name: tinyauth
          namespace: tinyauth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.hephaestus.markmk.com`) 
      kind: Rule
      services:
        - name: homepage
          port: 3000
          namespace: homepage
      middlewares:
        - name: tinyauth
          namespace: tinyauth
